infrastructure/ray/raycluster/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-dashboard
  namespace: kube-ray
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: oauth2-proxy-oauth2-forward-auth@kubernetescrd, oauth2-proxy-sign-in-redirect-auth@kubernetescrd, default-redirect-https@kubernetescrd
spec:
  rules:
    - host: ray-dashboard.ray.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ray-cluster-kuberay-head-svc
                port:
                  number: 8265
  tls:
    - hosts:
        - ray-dashboard.ray.apoorva64.com
      secretName: ray-dashboard-ingress
