infrastructure/ray/raycluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-serve
  namespace: kube-ray
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: ray-serve.ray.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ray-serve
                port:
                  number: 8000
  tls:
    - hosts:
        - ray-serve.ray.apoorva64.com
      secretName: ray-serve-ingress
